--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "googleapis": "^144.0.0",
     "http-status-codes": "^2.3.0",
     "linebot": "^1.6.1",
+    "moment": "^2.30.1",
     "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
